BusOne/src/objects/Sent_Fragment_vod__c.object
<CustomObject>
    <description>This object contains a record of fragments sent via Approved Email for the parent Sent Email.</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account_vod represents the Account to which the parent Sent_Email_vod record is associated.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sent Documents</relationshipLabel>
        <relationshipName>Sent_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Template_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the email template record in Approved_Document_vod object which was sent</description>
        <label>Sent Template</label>
        <referenceTo>Approved_Document_vod__c</referenceTo>
        <relationshipLabel>Sent Documents (Sent Template)</relationshipLabel>
        <relationshipName>Sent_Documents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Message_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Key Message associated with the Approved Document.</description>
        <label>Key Message</label>
        <referenceTo>Key_Message_vod__c</referenceTo>
        <relationshipLabel>Sent Documents</relationshipLabel>
        <relationshipName>Sent_Documents_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_Email_vod__c</fullName>
        <description>Lookup to the Sent Email record with which this fragment was emailed</description>
        <label>Sent Email</label>
        <referenceTo>Sent_Email_vod__c</referenceTo>
        <relationshipLabel>Sent Documents</relationshipLabel>
        <relationshipName>Sent_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sent_Fragment_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the fragment record in Approved_Document_vod object which was sent with the Sent Email record</description>
        <label>Sent Document</label>
        <referenceTo>Approved_Document_vod__c</referenceTo>
        <relationshipLabel>Sent Documents</relationshipLabel>
        <relationshipName>Sent_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sent Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SD-{00000000}</displayFormat>
        <label>Sent Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sent Documents</pluralLabel>
    <recordTypes>
        <fullName>Sent_Fragment_vodSent_Fragment_vod</fullName>
        <active>true</active>
        <description>Record type for Sent_Fragment_vod records that show which fragment that was sent with the Sent Email</description>
        <label>Sent_Fragment_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>